// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<AccountsCard /> > it renders an AccountsCard component with title as expected 1`] = `
<body>
  <div>
    <div
      class="chakra-card pos_relative trs_all_0.3s_ease-in-out bd_1px_solid_token(colors.gray.500)! [&:hover]:bx-sh_2px_5px_8px_0px_token(colors.gray.500)! [&:hover]:trf_translate3d(-2px,_-5px,_-5px) [&:hover]:cursor_pointer css-11joc2e"
      id="123456"
      title="My curent account"
    >
      <div
        class="chakra-card__header css-m9wzl5"
      >
        <h5
          class="chakra-heading css-khlt38"
        >
          Current account
        </h5>
        <h4
          class="chakra-heading css-svk9li"
        >
          My curent account
        </h4>
      </div>
      <div
        class="chakra-stack css-1y3f6ad"
      >
        <div
          class="chakra-stat css-1mbo1ls"
        >
          <dl>
            <dt
              class="chakra-stat__label css-0"
            >
              previous:
            </dt>
            <dd
              class="chakra-stat__number css-fvxuh5"
            >
              £11,000
            </dd>
            <dd
              class="chakra-stat__help-text css-0"
            >
              <span
                class="css-8b45rq"
              >
                increased by
              </span>
              <svg
                aria-hidden="true"
                class="chakra-icon css-m17ft2"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12.8,5.4c-0.377-0.504-1.223-0.504-1.6,0l-9,12c-0.228,0.303-0.264,0.708-0.095,1.047 C2.275,18.786,2.621,19,3,19h18c0.379,0,0.725-0.214,0.895-0.553c0.169-0.339,0.133-0.744-0.095-1.047L12.8,5.4z"
                  fill="currentColor"
                />
              </svg>
              10%
            </dd>
          </dl>
        </div>
        <div
          class="chakra-stat css-1mbo1ls"
        >
          <dl>
            <dt
              class="chakra-stat__label css-0"
            >
              current:
            </dt>
            <dd
              class="chakra-stat__number css-fvxuh5"
            >
              £12,000
            </dd>
            <dd
              class="chakra-stat__help-text css-0"
            >
              <span
                class="css-8b45rq"
              >
                increased by
              </span>
              <svg
                aria-hidden="true"
                class="chakra-icon css-m17ft2"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12.8,5.4c-0.377-0.504-1.223-0.504-1.6,0l-9,12c-0.228,0.303-0.264,0.708-0.095,1.047 C2.275,18.786,2.621,19,3,19h18c0.379,0,0.725-0.214,0.895-0.553c0.169-0.339,0.133-0.744-0.095-1.047L12.8,5.4z"
                  fill="currentColor"
                />
              </svg>
              9%
            </dd>
          </dl>
        </div>
      </div>
      <div
        class="chakra-card__body css-ttziis"
      >
        <div
          class="recharts-responsive-container"
          style="width: 100%; height: 95%; min-width: 0;"
        />
      </div>
      <div
        class="chakra-card__footer css-eldtq0"
      >
        <div
          class="chakra-button__group css-vhnxbm"
          data-orientation="horizontal"
          role="group"
        >
          <button
            class="chakra-button css-kn8t1u"
            type="button"
          >
            edit
          </button>
          <button
            class="chakra-button css-kn8t1u"
            type="button"
          >
            delete
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`<AccountsCard with increasing values > it calls supabase.delete when delete button is clicked 1`] = `
<body>
  <div>
    <div
      class="chakra-card pos_relative trs_all_0.3s_ease-in-out bd_1px_solid_token(colors.gray.500)! [&:hover]:bx-sh_2px_5px_8px_0px_token(colors.gray.500)! [&:hover]:trf_translate3d(-2px,_-5px,_-5px) [&:hover]:cursor_pointer css-11joc2e"
      id="123456"
      title="My curent account"
    >
      <div
        class="chakra-card__header css-m9wzl5"
      >
        <h5
          class="chakra-heading css-khlt38"
        >
          Current account
        </h5>
        <h4
          class="chakra-heading css-svk9li"
        >
          My curent account
        </h4>
      </div>
      <div
        class="chakra-stack css-1y3f6ad"
      >
        <div
          class="chakra-stat css-1mbo1ls"
        >
          <dl>
            <dt
              class="chakra-stat__label css-0"
            >
              previous:
            </dt>
            <dd
              class="chakra-stat__number css-fvxuh5"
            >
              £10,000
            </dd>
            <dd
              class="chakra-stat__help-text css-0"
            >
              <span
                class="css-8b45rq"
              >
                decreased by
              </span>
              <svg
                aria-hidden="true"
                class="chakra-icon css-19fbr80"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M21,5H3C2.621,5,2.275,5.214,2.105,5.553C1.937,5.892,1.973,6.297,2.2,6.6l9,12 c0.188,0.252,0.485,0.4,0.8,0.4s0.611-0.148,0.8-0.4l9-12c0.228-0.303,0.264-0.708,0.095-1.047C21.725,5.214,21.379,5,21,5z"
                  fill="currentColor"
                />
              </svg>
              -29%
            </dd>
          </dl>
        </div>
        <div
          class="chakra-stat css-1mbo1ls"
        >
          <dl>
            <dt
              class="chakra-stat__label css-0"
            >
              current:
            </dt>
            <dd
              class="chakra-stat__number css-fvxuh5"
            >
              £9,000
            </dd>
            <dd
              class="chakra-stat__help-text css-0"
            >
              <span
                class="css-8b45rq"
              >
                decreased by
              </span>
              <svg
                aria-hidden="true"
                class="chakra-icon css-19fbr80"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M21,5H3C2.621,5,2.275,5.214,2.105,5.553C1.937,5.892,1.973,6.297,2.2,6.6l9,12 c0.188,0.252,0.485,0.4,0.8,0.4s0.611-0.148,0.8-0.4l9-12c0.228-0.303,0.264-0.708,0.095-1.047C21.725,5.214,21.379,5,21,5z"
                  fill="currentColor"
                />
              </svg>
              -10%
            </dd>
          </dl>
        </div>
      </div>
      <div
        class="chakra-card__body css-ttziis"
      >
        <div
          class="recharts-responsive-container"
          style="width: 100%; height: 95%; min-width: 0;"
        />
      </div>
      <div
        class="chakra-card__footer css-eldtq0"
      >
        <div
          class="chakra-button__group css-vhnxbm"
          data-orientation="horizontal"
          role="group"
        >
          <button
            class="chakra-button css-kn8t1u"
            type="button"
          >
            edit
          </button>
          <button
            class="chakra-button css-kn8t1u"
            type="button"
          >
            delete
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;
